--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <label><input type="radio" name="sel_year" value="regular" checked> <span>평년(REGULAR)</span></label>
 
     <article id="ipt">
-        <input type="number" value="0"/>
-        <input type="number" value="0"/>
-        <input type="number" value="0"/>
-        <input type="number" value="0"/>
-        <input type="number" value="0"/>
+        <input type="number"/>
+        <input type="number"/>
+        <input type="number"/>
+        <input type="number"/>
+        <input type="number"/>
     </article><!-- ipt -->
 
     <button id="btn-add">추가</button>
