--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
     <label><input type="radio" name="sel_year" value="regular" checked> <span>평년(REGULAR)</span></label>
 
     <article id="ipt">
-        <input type="number"/>
-        <input type="number"/>
-        <input type="number"/>
-        <input type="number"/>
-        <input type="number"/>
+        <input type="number" value="1"/> <!-- 1월 1일-->
+        <input type="number" value="31"/> <!-- 1월 31일-->
+        <input type="number" value="32"/> <!-- 2월 1일-->
+        <input type="number" value="59"/> <!-- 2월 28일-->
+        <input type="number" value="60"/> <!-- 3월 1일 --> <!-- 윤년 : 2월 29일 -->
+        <input type="number" value="335"/> <!-- 12월 1일 -->
+        <input type="number" value="365"/> <!-- 12월 31일 -->
+        <input type="number" value="188"/> <!-- 7월 7일 -->
     </article><!-- ipt -->
 
+    <button id="btn-reset">리셋</button>
     <button id="btn-add">추가</button>
 </section><!-- sect-ipt -->
 
