--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <h1>줄리안 데이 계산기</h1>
 
 <section id="sect-ipt">
-    <label><input type="radio" name="sel_year" value="leap"> <span>윤년(LEAP)</span></label>
-    <label><input type="radio" name="sel_year" value="regular" checked> <span>평년(REGULAR)</span></label>
+    <div style="width:100%; margin-bottom:.5em; padding-left:.5em;">
+        <label><input type="radio" name="sel_year" value="leap"> <span>윤년(LEAP)</span></label>
+        <label><input type="radio" name="sel_year" value="regular" checked> <span>평년(REGULAR)</span></label>
+    </div>
 
     <article id="ipt">
         <input type="number" value="1"/> <!-- 1월 1일-->
