--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>줄리안 데이 계산기</title>
 <link href="./julian.css" rel="stylesheet" type="text/css"/>
 <script src="./julian.js" defer></script>
+<script>
+    const jul_URL = 'https://landweb.modaps.eosdis.nasa.gov/browse/calendar.html';
+</script>
 </head>
 <body>
-<!-- https://landweb.modaps.eosdis.nasa.gov/browse/calendar.html -->
-<h1>줄리안 데이 계산기</h1>
+
+<h1 onclick="window.open(jul_URL,'_blank');">줄리안 데이 계산기</h1>
 
 <section id="sect-ipt">
     <div style="width:100%; margin-bottom:.5em; padding-left:.5em;">
