--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     </div>
 
     <article id="ipt">
-        <input type="number" value="1"/> <!-- 1월 1일-->
-        <input type="number" value="31"/> <!-- 1월 31일-->
-        <input type="number" value="32"/> <!-- 2월 1일-->
-        <input type="number" value="59"/> <!-- 2월 28일-->
-        <input type="number" value="60"/> <!-- 3월 1일 --> <!-- 윤년 : 2월 29일 -->
-        <input type="number" value="335"/> <!-- 12월 1일 -->
-        <input type="number" value="365"/> <!-- 12월 31일 -->
-        <input type="number" value="188"/> <!-- 7월 7일 -->
+        <input type="text" value="365-364"/> <!-- 1월 1일-->
+        <input type="text" value="31"/> <!-- 1월 31일-->
+        <input type="text" value="32"/> <!-- 2월 1일-->
+        <input type="text" value="59"/> <!-- 2월 28일-->
+        <input type="text" value="60"/> <!-- 3월 1일 --> <!-- 윤년 : 2월 29일 -->
+        <input type="text" value="335"/> <!-- 12월 1일 -->
+        <input type="text" value="365"/> <!-- 12월 31일 -->
+        <input type="text" value="188"/> <!-- 7월 7일 -->
     </article><!-- ipt -->
 
     <button id="btn-reset">리셋</button>
